fixed chat overflowing over messagebox

--- a/src/components/ChatPanel/MessageBox.scss
+++ b/src/components/ChatPanel/MessageBox.scss
@@ -27,6 +27,7 @@
 
 .messagebox {
 	margin-left: $sidepanelsize;
+	margin-top: $sidepanelsize / 4;
 	padding: 0;
 	display: flex;
 }
